--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>to2rent</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -17,17 +20,17 @@
 
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__item-item">
-                  <a href="#" class="menu__item-link">About Us</a>
+              <li class="menu__list-item">
+                  <a href="#" class="menu__list-link">About Us</a>
               </li>
-              <li class="menu__item-item">
-                <a href="#" class="menu__item-link">Houses</a>
+              <li class="menu__list-item">
+                <a href="#" class="menu__list-link">Houses</a>
               </li>
-              <li class="menu__item-item">
-                <a href="#" class="menu__item-link">Apartments</a>
+              <li class="menu__list-item">
+                <a href="#" class="menu__list-link">Apartments</a>
               </li>
-              <li class="menu__item-item">
-                <a href="#" class="menu__item-link">Contact</a>
+              <li class="menu__list-item">
+                <a href="#" class="menu__list-link">Contact</a>
               </li>
             </ul>
           </nav>
