--- a/index.html
+++ b/index.html
@@ -113,6 +113,67 @@
       </div>
     </section>
 
+    <section class="about">
+      <div class="container">
+        <div class="about__inner">
+          <div class="our-managers">
+            <h4 class="our-managers__title about__title">Our managers</h4>
+            <div class="our-managers__items">
+
+              <div class="our-managers__item">
+                <img src="/images/our-managers-1.jpeg" alt="">
+                  <ul class="our-managers__list">
+                    <li class="our-managers__name">Tayisha</li>
+                    <li class="our-managers__age">28 years</li>
+                    <li class="our-managers__location">NYC</li>
+                  </ul>
+                <button class="our-managers__btn">Contact</button>
+              </div>
+              
+              <div class="our-managers__item">
+                <img src="/images/our-managers-2.jpeg" alt="">
+                  <ul class="our-managers__list">
+                    <li class="our-managers__name">Ana</li>
+                    <li class="our-managers__age">25 years</li>
+                    <li class="our-managers__location">LA</li>
+                  </ul>
+                <button class="our-managers__btn">Contact</button>
+              </div>
+
+              <div class="blog">
+                <div class="about__title">
+                  Blog
+                </div>
+                <ul class="blog__list">
+                  <li class="blog__item">
+                    <a class="blog__link"href="#">Security and video surveillance systems</a>
+                  </li>
+                  <li class="blog__item">
+                    <a class="blog__link"href="#">
+                      Club real estate is always in price</a></li>
+                  <li class="blog__item">
+                    <a class="blog__link"href="#">
+                      All the advantages of daily rental apartments</a></li>
+                  <li class="blog__item">
+                    <a class="blog__link"href="#">
+                      How to choose your dream home in Miami?</a></li>
+                  <li class="blog__item">
+                    <a class="blog__link"href="#">Top 10 VIP Villas in Los Angeles</a></li>
+                  <li class="blog__item">
+                    <a class="blog__link"href="#">The best apartments with panoramic views</a></li>
+                  <li class="blog__item">
+                    <a class="blog__link"href="#">
+                      Houses for rent for a year in Dallas</a></li>
+                </ul>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
