--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="about__inner">
           <div class="our-managers">
-            <h4 class="our-managers__title about__title">Our managers</h4>
+            <h4 class="our-managers__title about__title">Our <br/>Managers</h4>
             <div class="our-managers__items">
               
               <div class="our-managers__item">
